--- a/src/css/partials/rulers.css
+++ b/src/css/partials/rulers.css
@@ -1,7 +1,7 @@
 /* Components: Dividers */
 /* Horizontal Rule */
-.hr {
-    border-color: var(--color-surface-200-800);
+hr, .hr {
+    border-color: light-dark(var(--color-surface-200), var(--color-surface-100));
     border-top-width: 1px;
     display: block;
     width: 100%;
@@ -9,7 +9,7 @@
 
 /* Vertical Rule */
 .vr {
-    border-color: var(--color-surface-200-800);
+    border-color: light-dark(var(--color-surface-200), var(--color-surface-100));
     border-left-width: 1px;
     display: inline-block;
     height: 100%;
@@ -19,12 +19,12 @@
 .placeholder {
     background-color: var(--color-surface-200-800);
     border-radius: var(--radius-base);
-    min-height: --spacing(4);
+    min-height: calc(var(--spacing) * 4);
 }
 
 .placeholder-circle {
     aspect-ratio: 1 / 1;
     background-color: var(--color-surface-200-800);
     border-radius: 100%;
-    min-height: --spacing(5);
+    min-height: calc(var(--spacing) * 5);
 }
