--- a/src/css/partials/badge.css
+++ b/src/css/partials/badge.css
@@ -7,7 +7,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: --spacing(2);
+    gap: calc(var(--spacing) * 2);
 
     /* Typography */
     text-decoration-line: none;
@@ -16,8 +16,8 @@
     /* Size */
     font-size: var(--text-xs);
     line-height: var(--text-xs--line-height);
-    padding-block: --spacing(1);
-    padding-inline: --spacing(3);
+    padding-block: calc(var(--spacing) * 1);
+    padding-inline: calc(var(--spacing) * 3);
 }
 
 .badge-icon {
@@ -37,5 +37,5 @@
     font-size: var(--text-xs);
     width: var(--text-xs);
     height: var(--text-xs);
-    padding: --spacing(1.5);
+    padding: calc(var(--spacing) * 1.5);
 }
