--- a/src/css/partials/chip.css
+++ b/src/css/partials/chip.css
@@ -7,7 +7,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: --spacing(2);
+    gap: calc(var(--spacing) * 2);
 
     /* Typography */
     text-decoration-line: none;
@@ -16,17 +16,17 @@
     /* Size */
     font-size: var(--text-xs);
     line-height: var(--text-xs--line-height);
-    padding-block: --spacing(1);
-    padding-inline: --spacing(3);
+    padding-block: calc(var(--spacing) * 1);
+    padding-inline: calc(var(--spacing) * 3);
 
     /* Transitions */
     transition-property: all;
     transition-timing-function: var(--default-transition-timing-function);
     transition-duration: var(--default-transition-duration);
 
-    @variant hover {
+    &:hover {
         filter: brightness(125%);
-        @variant dark {
+        @media (prefers-color-scheme: dark) {
             filter: brightness(75%);
         }
     }
@@ -49,11 +49,11 @@
     font-size: var(--text-xs);
     width: var(--text-xs);
     height: var(--text-xs);
-    padding: --spacing(1.5);
+    padding: calc(var(--spacing) * 1.5);
 
-    @variant hover {
+    &:hover {
         filter: brightness(125%);
-        @variant dark {
+        @media (prefers-color-scheme: dark) {
             filter: brightness(75%);
         }
     }
