--- a/src/css/partials/progress.css
+++ b/src/css/partials/progress.css
@@ -11,7 +11,7 @@
     border-radius: var(--radius-base);
     background-color: var(--color-surface-200-800);
     width: 100%;
-    height: --spacing(2);
+    height: calc(var(--spacing) * 2);
     overflow: hidden;
 
     &::-webkit-progress-bar {
