--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,6 +4,7 @@
 @import "./partials/card.css";
 @import "./partials/chip.css";
 @import "./partials/forms.css";
+@import "./partials/container.css";
 @import "./theme/presets.css";
 @import "./partials/progress.css";
 @import "./partials/prose.css";
