fix: use correct light color for nav items

--- a/src/css/partials/dialog.css
+++ b/src/css/partials/dialog.css
@@ -8,7 +8,7 @@
 
 .dialog-content {
     position: fixed;
-    background-color: var(--sidebar-color);
+    background-color: var(--nav-item-background);
     left: 50%;
     top: 50%;
     z-index: 50;
