chore: remove overridden root properties

--- a/src/css/theme/skeleton-theme.css
+++ b/src/css/theme/skeleton-theme.css
@@ -1,50 +1,9 @@
 :root {
-    /* Spacing --- */
-    /* https://tailwindcss.com/docs/functions-and-directives#spacing-function */
-    --spacing: 0.25rem;
-    /* Typography --- */
-    --text-scaling: 1;
-    /* --- */
-    --base-font-color: inherit;
-    --base-font-color-dark: inherit;
-    --base-font-family: inherit;
-    --base-font-size: inherit;
-    --base-line-height: inherit;
-    --base-font-weight: inherit;
-    --base-font-style: inherit;
-    --base-letter-spacing: inherit;
-    /* --- */
-    --heading-font-color: inherit;
-    --heading-font-color-dark: inherit;
-    --heading-font-family: inherit;
-    --heading-font-weight: inherit;
-    --heading-font-style: inherit;
-    --heading-letter-spacing: inherit;
-    /* --- */
-    --anchor-font-color: inherit;
-    --anchor-font-color-dark: inherit;
-    --anchor-font-family: inherit;
-    --anchor-font-size: inherit;
-    --anchor-line-height: inherit;
-    --anchor-font-weight: inherit;
-    --anchor-font-style: inherit;
-    --anchor-letter-spacing: inherit;
-    --anchor-text-decoration: inherit;
-    --anchor-text-decoration-hover: underline;
-    --anchor-text-decoration-active: inherit;
-    --anchor-text-decoration-focus: inherit;
-    /* Radius --- */
-    --radius-base: 0.25rem;
-    --radius-container: 0.25rem;
-    /* Edges --- */
-    --default-border-width: 1px;
-    --default-divide-width: 1px;
-    --default-ring-width: 1px;
     /* Animations --- */
     --animate-progress-linear-indeterminate-horizontal: progress-linear-indeterminate-horizontal 1.5s ease-in-out infinite;
     --animate-progress-linear-indeterminate-vertical: progress-linear-indeterminate-vertical 1.5s ease-in-out infinite;
     --animate-progress-circular-indeterminate: progress-circular-indeterminate 1.5s linear infinite;
-    /* Colors --- */
+    /* Colors --- overridden by theme */
     --color-primary-50: oklch(98.5% 0 0deg);
     --color-primary-100: oklch(97% 0 0deg);
     --color-primary-200: oklch(92.2% 0 0deg);
@@ -56,19 +15,6 @@
     --color-primary-800: oklch(26.9% 0 0deg);
     --color-primary-900: oklch(20.5% 0 0deg);
     --color-primary-950: oklch(14.5% 0 0deg);
-    --color-primary-contrast-dark: var(--color-primary-950);
-    --color-primary-contrast-light: var(--color-primary-50);
-    --color-primary-contrast-50: var(--color-primary-contrast-dark);
-    --color-primary-contrast-100: var(--color-primary-contrast-dark);
-    --color-primary-contrast-200: var(--color-primary-contrast-dark);
-    --color-primary-contrast-300: var(--color-primary-contrast-dark);
-    --color-primary-contrast-400: var(--color-primary-contrast-light);
-    --color-primary-contrast-500: var(--color-primary-contrast-light);
-    --color-primary-contrast-600: var(--color-primary-contrast-light);
-    --color-primary-contrast-700: var(--color-primary-contrast-light);
-    --color-primary-contrast-800: var(--color-primary-contrast-light);
-    --color-primary-contrast-900: var(--color-primary-contrast-light);
-    --color-primary-contrast-950: var(--color-primary-contrast-light);
     --color-secondary-50: oklch(98.5% 0 0deg);
     --color-secondary-100: oklch(97% 0 0deg);
     --color-secondary-200: oklch(92.2% 0 0deg);
@@ -80,19 +26,6 @@
     --color-secondary-800: oklch(26.9% 0 0deg);
     --color-secondary-900: oklch(20.5% 0 0deg);
     --color-secondary-950: oklch(14.5% 0 0deg);
-    --color-secondary-contrast-dark: var(--color-secondary-950);
-    --color-secondary-contrast-light: var(--color-secondary-50);
-    --color-secondary-contrast-50: var(--color-secondary-contrast-dark);
-    --color-secondary-contrast-100: var(--color-secondary-contrast-dark);
-    --color-secondary-contrast-200: var(--color-secondary-contrast-dark);
-    --color-secondary-contrast-300: var(--color-secondary-contrast-dark);
-    --color-secondary-contrast-400: var(--color-secondary-contrast-light);
-    --color-secondary-contrast-500: var(--color-secondary-contrast-light);
-    --color-secondary-contrast-600: var(--color-secondary-contrast-light);
-    --color-secondary-contrast-700: var(--color-secondary-contrast-light);
-    --color-secondary-contrast-800: var(--color-secondary-contrast-light);
-    --color-secondary-contrast-900: var(--color-secondary-contrast-light);
-    --color-secondary-contrast-950: var(--color-secondary-contrast-light);
     --color-tertiary-50: oklch(98.5% 0 0deg);
     --color-tertiary-100: oklch(97% 0 0deg);
     --color-tertiary-200: oklch(92.2% 0 0deg);
@@ -104,19 +37,6 @@
     --color-tertiary-800: oklch(26.9% 0 0deg);
     --color-tertiary-900: oklch(20.5% 0 0deg);
     --color-tertiary-950: oklch(14.5% 0 0deg);
-    --color-tertiary-contrast-dark: var(--color-tertiary-950);
-    --color-tertiary-contrast-light: var(--color-tertiary-50);
-    --color-tertiary-contrast-50: var(--color-tertiary-contrast-dark);
-    --color-tertiary-contrast-100: var(--color-tertiary-contrast-dark);
-    --color-tertiary-contrast-200: var(--color-tertiary-contrast-dark);
-    --color-tertiary-contrast-300: var(--color-tertiary-contrast-dark);
-    --color-tertiary-contrast-400: var(--color-tertiary-contrast-light);
-    --color-tertiary-contrast-500: var(--color-tertiary-contrast-light);
-    --color-tertiary-contrast-600: var(--color-tertiary-contrast-light);
-    --color-tertiary-contrast-700: var(--color-tertiary-contrast-light);
-    --color-tertiary-contrast-800: var(--color-tertiary-contrast-light);
-    --color-tertiary-contrast-900: var(--color-tertiary-contrast-light);
-    --color-tertiary-contrast-950: var(--color-tertiary-contrast-light);
     --color-success-50: oklch(98.5% 0 0deg);
     --color-success-100: oklch(97% 0 0deg);
     --color-success-200: oklch(92.2% 0 0deg);
@@ -128,19 +48,6 @@
     --color-success-800: oklch(26.9% 0 0deg);
     --color-success-900: oklch(20.5% 0 0deg);
     --color-success-950: oklch(14.5% 0 0deg);
-    --color-success-contrast-dark: var(--color-success-950);
-    --color-success-contrast-light: var(--color-success-50);
-    --color-success-contrast-50: var(--color-success-contrast-dark);
-    --color-success-contrast-100: var(--color-success-contrast-dark);
-    --color-success-contrast-200: var(--color-success-contrast-dark);
-    --color-success-contrast-300: var(--color-success-contrast-dark);
-    --color-success-contrast-400: var(--color-success-contrast-light);
-    --color-success-contrast-500: var(--color-success-contrast-light);
-    --color-success-contrast-600: var(--color-success-contrast-light);
-    --color-success-contrast-700: var(--color-success-contrast-light);
-    --color-success-contrast-800: var(--color-success-contrast-light);
-    --color-success-contrast-900: var(--color-success-contrast-light);
-    --color-success-contrast-950: var(--color-success-contrast-light);
     --color-warning-50: oklch(98.5% 0 0deg);
     --color-warning-100: oklch(97% 0 0deg);
     --color-warning-200: oklch(92.2% 0 0deg);
@@ -152,19 +59,6 @@
     --color-warning-800: oklch(26.9% 0 0deg);
     --color-warning-900: oklch(20.5% 0 0deg);
     --color-warning-950: oklch(14.5% 0 0deg);
-    --color-warning-contrast-dark: var(--color-warning-950);
-    --color-warning-contrast-light: var(--color-warning-50);
-    --color-warning-contrast-50: var(--color-warning-contrast-dark);
-    --color-warning-contrast-100: var(--color-warning-contrast-dark);
-    --color-warning-contrast-200: var(--color-warning-contrast-dark);
-    --color-warning-contrast-300: var(--color-warning-contrast-dark);
-    --color-warning-contrast-400: var(--color-warning-contrast-light);
-    --color-warning-contrast-500: var(--color-warning-contrast-light);
-    --color-warning-contrast-600: var(--color-warning-contrast-light);
-    --color-warning-contrast-700: var(--color-warning-contrast-light);
-    --color-warning-contrast-800: var(--color-warning-contrast-light);
-    --color-warning-contrast-900: var(--color-warning-contrast-light);
-    --color-warning-contrast-950: var(--color-warning-contrast-light);
     --color-error-50: oklch(98.5% 0 0deg);
     --color-error-100: oklch(97% 0 0deg);
     --color-error-200: oklch(92.2% 0 0deg);
@@ -176,19 +70,6 @@
     --color-error-800: oklch(26.9% 0 0deg);
     --color-error-900: oklch(20.5% 0 0deg);
     --color-error-950: oklch(14.5% 0 0deg);
-    --color-error-contrast-dark: var(--color-error-950);
-    --color-error-contrast-light: var(--color-error-50);
-    --color-error-contrast-50: var(--color-error-contrast-dark);
-    --color-error-contrast-100: var(--color-error-contrast-dark);
-    --color-error-contrast-200: var(--color-error-contrast-dark);
-    --color-error-contrast-300: var(--color-error-contrast-dark);
-    --color-error-contrast-400: var(--color-error-contrast-light);
-    --color-error-contrast-500: var(--color-error-contrast-light);
-    --color-error-contrast-600: var(--color-error-contrast-light);
-    --color-error-contrast-700: var(--color-error-contrast-light);
-    --color-error-contrast-800: var(--color-error-contrast-light);
-    --color-error-contrast-900: var(--color-error-contrast-light);
-    --color-error-contrast-950: var(--color-error-contrast-light);
     --color-surface-50: oklch(98.5% 0 0deg);
     --color-surface-100: oklch(97% 0 0deg);
     --color-surface-200: oklch(92.2% 0 0deg);
@@ -201,9 +82,6 @@
     --color-surface-900: oklch(20.5% 0 0deg);
     --color-surface-950: oklch(14.5% 0 0deg);
 
-    /* Backgrounds --- */
-    --body-background-color: var(--color-surface-50);
-    --body-background-color-dark: var(--color-surface-950);
     /* Color Pairings --- */
     /* https://github.com/tailwindlabs/tailwindcss/discussions/16292#discussioncomment-12076534 */
     --color-primary-50-950: light-dark(var(--color-primary-50), var(--color-primary-950));
